Enter Score button functionality completed

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <img src="dice-5.png" alt="Dice" class="dice">
         </div>
         <div class="input-form">
-          <form class="score-input">
-            <p>Input your desired winning score:</p><p><input type="text" name="winning-value" value=0></p>
-            <p><input type="button" name="submit-form" value="Enter Goal"></p>
-          </form>
+      <!--    <form class="score-input"> -->
+            <p>Input your winning score for this game:</p><p><input type="text" id="winning-value" value='Enter Score'></p>
+            <p><input type="button" id="submitScore" value="Enter Goal"></p>
+        <!--  </form> -->
         </div>
 
         <script src="app.js"></script>
