Updated button functionality.

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         </div>
         <div class="input-form">
       <!--    <form class="score-input"> -->
-            <p>Input your winning score for this game:</p><p><input type="text" id="winning-value" value='Enter Score'></p>
-            <p><input type="button" id="submitScore" value="Enter Goal"></p>
+            <p>Winning score for this game:</p><p><input type="text" id="winning-value" value='100'></p>
+            <p><input type="button" id="submitScore" value="Enter New Goal"></p>
         <!--  </form> -->
         </div>
 
