--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
 
             <img src="dice-5.png" alt="Dice" class="dice">
+            <img src="dice-5.png" alt="Dice" class="dice dice02">
         </div>
         <div class="input-form">
       <!--    <form class="score-input"> -->
