--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <div class="player-current-label">Current</div>
                     <div class="player-current-score" id="current-0">11</div>
                 </div>
+                <div class="player0-busted">BUSTED</div>
             </div>
 
             <div class="player-1-panel">
@@ -27,6 +28,7 @@
                     <div class="player-current-label">Current</div>
                     <div class="player-current-score" id="current-1">0</div>
                 </div>
+                <div class="player1-busted">OUT</div>
             </div>
 
             <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
